erDiagram
    USERS ||--o{ SHORT_URLS : creates
    USERS ||--o{ RESET_TOKENS : has
    USERS ||--o{ API_KEYS : owns
    USERS ||--o{ USER_SUBSCRIPTIONS : subscribes_to
    USERS ||--o{ INVOICES : has
    SHORT_URLS ||--o{ ANALYTICS : records
    SUBSCRIPTION_TYPES ||--o{ SUBSCRIPTION_FEATURES : has
    SUBSCRIPTION_TYPES ||--o{ SUBSCRIPTION_LIMITS : has
    FEATURES ||--o{ SUBSCRIPTION_FEATURES : included_in
    SUBSCRIPTION_TYPES ||--o{ USER_SUBSCRIPTIONS : type_of
    SHORT_URLS }o--|| SUBSCRIPTION_TYPES : created_with

    USERS {
        uuid id PK
        string email UK
        string password_hash
        string full_name
        boolean is_verified
        boolean is_admin
        timestamp created_at
        timestamp updated_at
    }

    SHORT_URLS {
        string short_code PK
        string original_url
        uuid user_id FK
        uuid subscription_type_id FK
        string title
        string description
        boolean is_custom
        boolean is_active
        timestamp created_at
        timestamp expires_at
        timestamp last_accessed_at
        int clicks
    }

    ANALYTICS {
        uuid id PK
        string short_url_code FK
        string ip_address
        string user_agent
        string referer
        string country
        string city
        string device_type
        string browser
        timestamp created_at
    }

    RESET_TOKENS {
        uuid id PK
        uuid user_id FK
        string token UK
        timestamp expires_at
        timestamp created_at
    }

    API_KEYS {
        uuid id PK
        uuid user_id FK
        string key UK
        string name
        boolean is_active
        timestamp last_used_at
        timestamp created_at
        timestamp updated_at
    }

    SUBSCRIPTION_TYPES {
        uuid id PK
        string name UK
        string display_name
        string description
        decimal price_monthly
        decimal price_yearly
        timestamp created_at
        timestamp updated_at
    }

    FEATURES {
        uuid id PK
        string name UK
        string description
        timestamp created_at
        timestamp updated_at
    }

    SUBSCRIPTION_FEATURES {
        uuid id PK
        uuid subscription_type_id FK
        uuid feature_id FK
        string value
        timestamp created_at
        timestamp updated_at
    }

    SUBSCRIPTION_LIMITS {
        uuid id PK
        uuid subscription_type_id FK
        string limit_type
        int limit_value
        timestamp created_at
        timestamp updated_at
    }

    USER_SUBSCRIPTIONS {
        uuid id PK
        uuid user_id FK
        uuid subscription_type_id FK
        timestamp current_period_start
        timestamp current_period_end
        string status
        timestamp created_at
        timestamp updated_at
    }

    INVOICES {
        uuid id PK
        uuid user_id FK
        decimal amount
        string currency
        string status
        timestamp invoice_date
        timestamp due_date
        timestamp paid_at
        timestamp created_at
        timestamp updated_at
    }
